# debattle-rust

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: instructions.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  prompts.yaml  tauri.conf.json
src-tauri/src/: ai_client.rs  game_logic.rs  main.rs  models.rs  prompts.rs
