[package]
name = "debattle-tauri"
version = "0.1.0"
description = "Debattlers Tauri App"
authors = ["Rui"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
serde_yaml = "0.9"
rand = "0.8"

[features]
# default enables pruning unused code from tauri
# we don't need it as we are in development
custom-protocol = [ "tauri/custom-protocol" ]
